# Unreal-Image

./: README.md
src/androidTest/java/com/example/jnitestproject/: ExampleInstrumentedTest.kt
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  native-lib.cpp
src/main/java/: DefaultSkinFinder.java
src/main/java/com/example/jnitestproject/: MainActivity.kt  MainActivity2.kt  OptionsAdapter.kt  SingleOption.kt  SkinFinder.java
src/main/res/layout/: activity_main.xml  activity_main2.xml  beautifyoptions.xml  option_item.xml
src/main/res/menu/: menu.xml
src/main/res/values/: strings.xml  themes.xml
src/main/res/values-night/: themes.xml
src/test/java/com/example/jnitestproject/: ExampleUnitTest.kt
